feat(stop): 정류소 변경 이력 관리 및 관련 기능 추가
- StopUpdateHistory 엔티티 및 Repository 추가로 정류소 변경 이력 관리 지원.
- Stop 엔티티에 낙관적 잠금(version) 및 등록자 정보 컬럼 추가.
- 정류소 변경 감지 로직(applyUpdate) 및 히스토리 생성 기능 구현.
- stop_update_history 테이블 및 관련 DB 변경 이력(changelog) 추가.
- StopCommandGuard 및 StopRegisterService 리팩토링으로 인증 및 검증 로직 개선.
- Stop 관련 테스트 코드 추가로 신규 로직 검증 및 안정성 강화.